# Customer_Complaint_Responder

./: .env.example  .gitignore  Dockerfile  README.md  app.py  ccr_langgraph.ipynb  ccr_notebook.ipynb  deployment.md  docker-compose.yml  redis.md  redis_consumer_group.md  taints-and-tolerations.md
apps/worker/: README.md  explanation.md  pyproject.toml
apps/worker/app/: main.py
apps/worker/app/core/: __init__.py  config.py
apps/worker/app/services/: __init__.py  email.py
apps/worker/app/services/agent/: __init__.py  agent.py  prompts.py
argocd/: app-of-apps.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: __init__.py  complaints.py
backend/app/core/: config.py
backend/app/schemas/: __init__.py
backend/app/services/: email.py  imap.py
backend/app/services/agent/: agent.py  prompts.py  tools.py
destroy_essentials/: README.md  delete_ecr_repo.py  delete_statebucket.py  pyproject.toml
helm/: Chart.yaml  values.yaml
infra/: .envrc.example  .terraform.lock.hcl  addons.tf  backend.conf.example  ecr.tf  eks.tf  github-repo-creds.tf  helm-argocd.tf  iam-external-secrets.tf  iam-karpenter.tf  main.tf  outputs.tf  provider.tf  providers.tf  secrets.tf  ssm_parameters.tf  terraform.tfvars.example  variables.tf  vpc.tf
k8s-minikube/: local-dev-guide.md  namespace.yaml  poller.yaml  redis.yaml  worker.yaml
notebooks/: ccr_notebook.ipynb
scripts/: build-push.sh  deploy.sh
statebucket/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
(+62 files in other folders)
