[project]
name = "ccr-worker"
version = "0.1.0"
description = "Customer Complaint Responder — AI Worker microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "langchain>=1.3.1",
    "langchain-google-genai>=4.2.3",
    "langgraph>=1.2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
]
